# tmpc

./: CMakeLists.txt  Doxyfile  Doxyfile.in  README.org  TODO.org  application.cpp  application.h  display_widget.cpp  display_widget.h  exception.h  history_line_edit.cpp  history_line_edit.h  main_window.cpp  main_window.h  mpd.cpp  mpd.h  mpdpp_translations.cpp  search_queue_widget.cpp  search_queue_widget.h  search_queue_window.cpp  search_queue_window.h  song.h  song_widget.cpp  song_widget.h  tmpc.cpp  tmpc.qrc  tmpc_fr.ts  todo.org
mpd++/: CMakeLists.txt  events.cpp  events.h  exception.cpp  exception.h  forward.h  mpd.cpp  mpd.h  search.cpp  search.h  song.cpp  song.h  song_iterator.cpp  song_iterator.h  song_tag_iterator.cpp  song_tag_iterator.h  status.cpp  status.h  tag.cpp  tag.h
scripts/: update_translations.sh
src/: CMakeLists.txt  application.cpp  application.h  display_widget.cpp  display_widget.h  history_line_edit.cpp  history_line_edit.h  main_window.cpp  main_window.h  mpdpp_translations.cpp  search_queue_widget.cpp  search_queue_widget.h  song_model.cpp  song_model.h  song_widget.cpp  song_widget.h  tmpc.cpp  tmpc.man  tmpc.qrc  tmpc_fr.ts
